# smartstay

./: .gitignore  1. SmartStay-Agent.md  AGENTS.md  CLAUDE.md  DATABASE_RELATIONS.md  PROJECT_SUMMARY.md  Phase5-执行清单.md  SmartStay.pen  _toggle_block.dart  docker-compose.yml  feature_list.json  harness-assessment.html  harness-benchmark.json  init.sh  progress.md  session-handoff.md  首页.html
.claude/: settings.json  settings.local.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 59b5a7f56a49_initial_schema.py
backend/app/: main.py
backend/app/ai/: complaint.py  graph.py  guard.py  pricing.py  rag.py  state.py  tools.py  web_search.py
backend/app/aliyun/: asr.py  face.py
backend/app/api/: admin.py  ai.py  alipay.py  auth.py  consumptions.py  face.py  hotel.py  orders.py  rag.py  rooms.py  work_orders.py
backend/app/core/: config.py  database.py  deps.py  security.py  seed.py  utils.py
backend/app/models/: __init__.py  ai_log.py  chat.py  consumption.py  guest.py  hotel.py  invoice.py  order.py  preference.py  rag.py  room.py  security_log.py  user.py  work_order.py
backend/app/schemas/: admin.py  ai.py  auth.py  consumption.py  order.py  room.py  work_order.py
backend/app/tasks/: audit.py
backend/app/ws/: manager.py
backend/tests/: conftest.py  test_auth.py  test_orders.py  test_rooms.py  test_work_orders.py
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
rag_docs/: 住客常见问题与详细服务指南.md  智宿云大酒店服务完全手册.md
(+51 files in other folders)
