[project]
name = "smartstay-backend"
version = "0.2.0"
description = "SmartStay Hotel Management API"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.32.0,<0.33.0",
    "sqlmodel>=0.0.22,<0.1.0",
    "asyncpg>=0.31.0,<1.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "alembic>=1.14.0,<2.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-multipart>=0.0.18,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "websockets>=14.0.0,<15.0.0",
    "pgvector>=0.3.6,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "langchain (>=1.3.1,<2.0.0)",
    "langgraph (>=1.2.1,<2.0.0)",
    "langchain-deepseek (>=1.0.1,<2.0.0)",
    "openai (>=2.38.0,<3.0.0)",
    "langchain-text-splitters (>=1.1.2,<2.0.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
